# agentic_spec_driven_pipeline

./: .gitignore  README.md  SPEC_EXPORT_TOOLS.md  env.example  pyproject.toml
docs/: common.md  dataform-ai-agent-testing-prd.md  linkedin-post-final.md  linkedin-post.md  spec-driven-pipeline-with-llms.md
examples/: README.md
examples/business_requirements/: customer_order_pipeline_requirement.md
examples/business_requirements/source_ddl/: commerce_order_items.sql  commerce_orders.sql  crm_addresses.sql  crm_customers.sql  fx_rates.sql  support_tickets.sql
examples/human_review/: README.md  spec_diagram.md  spec_review.html  spec_review.xlsx
examples/human_review/spec_csv/: 00_overview.csv  01_all_columns.csv  02_all_transforms.csv  03_all_joins.csv  04_all_tests.csv  05_data_lineage.csv  model_dim_customers_scd2.csv  model_fact_customer_orders.csv  model_stg_customers.csv  model_stg_orders.csv  model_stg_support_pivot.csv
examples/pipeline_code/: workflow_settings.yaml
examples/pipeline_code/definitions/: dim_customers_scd2.sqlx  stg_orders.sqlx  (+3 more)
examples/seeds/: commerce_order_items.csv  commerce_orders.csv  crm_addresses.csv  crm_customers.csv  fx_rates.csv  support_tickets.csv
examples/technical_requirements/: spec.json
examples/tests/: test_dim_customers_scd2.sql  test_fact_customer_orders.sql  test_req_stg_customers.sql  test_stg_customers.sql  test_stg_orders.sql  test_stg_support_pivot.sql
src/agentic_spec_driven_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/agentic_spec_pipeline/: __init__.py  cli.py  webapp.py
(+26 files in other folders)
